# TimeKeeper

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  rfid_bootstrap  run_codegen.bat  sitemap.xml  vars.yml
.cargo/: config.toml
.claude/: settings.local.json
client/: pubspec.yaml
docs/: index.md
protos/: tk.proto
search/: search_index.json
server/: Cargo.toml  build.rs
server/src/: config.rs  lib.rs
server/src/auth/: permissions.rs
server/src/core/: api.rs  db.rs  logging.rs  migration.rs  mod.rs  scheduler.rs  server.rs  time.rs
server/src/modules/: mod.rs
server/src/modules/discord/: bot.rs  commands.rs  mod.rs  service.rs
server/src/modules/location/: api.rs  repository.rs
server/src/modules/notification/: api.rs  mod.rs  repository.rs
server/src/modules/rfid_tag/: api.rs  mod.rs  repository.rs
server/src/modules/schedule/: api.rs  csv_parser.rs  ics_parser.rs  mod.rs
server/src/modules/session/: api.rs  helpers.rs  mod.rs  repository.rs  service.rs
server/src/modules/session_rsvp/: api.rs  repository.rs
server/src/modules/settings/: api.rs  repository.rs
server/src/modules/statistics/: api.rs  leaderboard.rs  mod.rs
server/src/modules/stats/: api.rs
server/src/modules/sync/: api.rs
server/src/modules/team_member/: api.rs  csv_parser.rs  mod.rs  repository.rs
server/src/modules/team_member_session/: api.rs  csv_parser.rs  mod.rs  repository.rs
server/src/modules/user/: api.rs
test_data/: .gitignore  mentors.csv  schedule.csv  schedule.ics  students.csv
(+211 files in other folders)
