[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
async-stream = "0.3.6"
axum = "0.8.8"
chrono = "0.4.43"
clap = { version = "4.5.57", features = ["derive"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
log = "0.4.29"
log4rs = "1.4.0"
once_cell = "1.21.3"
prost = "0.14.3"
rand = "0.10.0"
regex = "1.12.3"
serde = "1.0.228"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "signal"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tonic = "0.14.3"
tonic-prost = "0.14.3"
tonic-web = "0.14.3"
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "fs"] }

[dependencies.database]
path = "../database"

[build-dependencies]
tonic-prost-build = "0.14.3"
